[package]
name = "coggo"
version = "0.1.0"
authors = ["Gregory Brutsche <gregory@brutsches.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
chrono = { version = "0.4.19" }
const_format = { version = "0.2.26" }
fancy-regex = { version = "0.10.0" }
once_cell = { version = "1.13.0" }
regex = { version = "1.6.0" }
reqwest = { version = "0.11.11" }
serde_json = { version = "1.0.82" }
serenity = { version = "0.11.4", features = ["collector"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }