[package]
name = "coggo"
version = "0.1.0"
authors = ["Gregory Brutsche <gregory@brutsches.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
chrono = { version = "0.4.33" }
const_format = { version = "0.2.32" }
fancy-regex = { version = "0.13.0" }
once_cell = { version = "1.19.0" }
regex = { version = "1.10.3" }
reqwest = { version = "0.11.24" }
serde_json = { version = "1.0.113" }
serenity = { version = "0.12.0", features = ["collector"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }